<resources>
    <string name="app_name">Planner</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="create_note">New note</string>
    <string name="main">Home</string>
    <string name="note_text">Note text:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="error_load_notes">Error! Cannot load notes.</string>
    <string name="note_saved">Note saved</string>
    <string name="no_date">No date</string>
    <string name="priority">Priority:</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="note_text_is_empty">Note text is empty!</string>
    <string name="note_view">View note</string>
    <string name="ok">Ok</string>
    <string name="edit_note">Edit note</string>
    <string name="do_you_want_to_delete_this_note">Delete this note?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
</resources>