<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollViewCreateNote"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonSave">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewNoteTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_text"
                android:textColor="@color/brown_grey"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewNoteText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:elevation="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintDimensionRatio="1.552:1"
                app:layout_constraintTop_toBottomOf="@id/textViewNoteTextTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/editTextNoteText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey_medium"
                    android:importantForAutofill="no"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    tools:text="@tools:sample/lorem/random"
                    tools:ignore="LabelFor" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBoxTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/brown_grey"
                android:buttonTint="@color/brown_grey"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/cardViewNoteText"
                app:layout_constraintStart_toStartOf="parent"
                tools:checked="true"/>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:visibility="gone"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/checkBoxTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/save"
        android:backgroundTint="@color/purple"
        android:textColor="@color/brown_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>